Working on importing dependent mappings. Some problems arose: Intermediary does not contain information on objects it does not modify. So we will have to go up the chain to track down the actual target object.